@startuml

skinparam maxMessageSize 100
skinparam shadowing false

title Relationships of material entities with features.\n

class Card
class Entry
class Deck

Deck "1" <--> "0..*" Entry : owns >
Entry "1" <--> "1..*" Card : generates >
Deck "1" <--> "0..*" Card : owns >

class EntryType
class CardFormat
class CardFormatStructure
abstract class Component

Entry "0..*" <--> "1" EntryType : has fields and Card generation defined by >
EntryType "1" *-- "1..*" CardFormat : contains for each Card generated by each Entry >
CardFormat "1" --- "0..*" Card : specifies display style and structure of >

CardFormat "1" *-- "2" CardFormatStructure : has structure specified by >
CardFormatStructure "1" *-- "0..*" Component : is composed of >

@enduml